fix: add exclude-spacing to title mixins

--- a/src/components/sbb-navigation-action/sbb-navigation-action.scss
+++ b/src/components/sbb-navigation-action/sbb-navigation-action.scss
@@ -20,7 +20,7 @@
 
 .sbb-navigation-action {
   @include sbb.button-reset;
-  @include sbb.title-4;
+  @include sbb.title-4($exclude-spacing: true);
 
   cursor: pointer;
   text-decoration: none;
